--- a/migrator/pom.xml
+++ b/migrator/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jboss.aerogear.unifiedpush</groupId>
         <artifactId>unifiedpush-parent</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.1.0-alpha.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>unifiedpush-migrator</artifactId>
